--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-chatbotify": "^2.0.0-beta.26",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "recharts": "^2.15.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
